# device

./: .asoundrc  .gitignore  README.md  authenticate.sh  milobella.py  porcupine.py  requirements.txt  setup.cfg
.github/workflows/: test.yaml
assets/: preset_onboard_speakers_and_microphones
config/: tracing.yaml
docs/: raspiaudio-ultra+-configuration.md  technical-choices.md  wake-up-word-experimentation.md
experiment/: chromecast.py  pocketsphinx.py
milo/: cmd.py  google.py  message.py  milobella.py  porcupine.py  run.py
milo/cast/: __init__.py
milo/stt/: __interface__.py  google.py
milo/tracing/: tracing.py
milo/tts/: __interface__.py  google.py  google2.py
milo/wuw/: __interface__.py  pocketsphinx.py  porcupine.py  rpi_feedback.py
tests/: test_run.py
