[metadata]
name = milobella
version = 0.2.0
description='The Milobella client used in a speaker device',
author='Célian GARCIA',
author_email='celian.garcia1@gmail.com',
url='https://github.com/milobella/device',

[options]
packages = milobella

[options.entry_points]
console_scripts =
    milobella = milobella.cmd:main
