[metadata]
name = milobella
version = 0.4.0
description = 'The Milobella client used in a speaker device',
author = 'Célian GARCIA',
author_email = 'celian.garcia1@gmail.com',
url = 'https://github.com/milobella/device',

[options]
packages = milo

[options.entry_points]
console_scripts =
    milobella = milo.cmd:main
